correção_widht_mobile
mudando o leyout para o mobile n quebrar

--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
         </asside>
     </header>
 <div id="popular_film" class="d-flex bg-secondary bg-opacity-25">
-        <img id="poster" alt="Capa do filme">
-        <div id="film_info" class="p-3 d-flex flex-column">
+        <img id="poster" alt="Capa do filme" style="width: 100%;" onclick="indisponivel()">
+        <div id="film_info" class="p-3 d-flex flex-column d-none">
             <h2 id="titulo" class="display-5 mb-3"></h2>
             <p id="sinopse"></p>
             <div id="vote">
