--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,11 +49,11 @@
 
     <main id="main">
 
-        <a href="movieInfo.html" id="poster"></a>
+        <a href="detalhes.html" id="poster"></a>
 
         <div class="container-fluid mt-3">
             <a href="" class="text-dark text-underline-hover" onclick="indisponivel()"">
-                <h2 class="display-5">Filmes em alta</h2>
+                <h2 class="display-5">Popular movies</h2>
             </a>
             <div id="filmesEmAlta" class="d-flex gap-3 overflow-scroll mt-3 mb-3">
                 <a href="" id="see_more" class="text-bg-dark d-flex align-items-center justify-content-center text-light p-3" onclick="indisponivel()" style="order: 1;">
@@ -61,7 +61,7 @@
                 </a>
             </div>
             <a href="" class="text-dark text-underline-hover" onclick="indisponivel()"">
-                <h2 class="display-5">Series em alta</h2>
+                <h2 class="display-5">Popular series</h2>
             </a>
             <div id="seriesEmAlta" class="d-flex gap-3 overflow-scroll mt-3">
                 <a href="" id="see_more" class="text-bg-dark d-flex align-items-center justify-content-center text-light p-3" onclick="indisponivel()" style="order: 1;">
