--- a/detalhes.html
+++ b/detalhes.html
@@ -6,16 +6,16 @@
     <title>MovieDB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
-    <script src="scripts.js" defer></script>
+    <script src="scripts/details.js" type="module" defer></script>
+    <script src="scripts/search.js" type="module" defer></script>
 </head>
 <body>
 
     <div id="searchPage" class="d-none">
-
-        <input type="text" name="" id="searchInput" class="w-100 p-3 position-fixed top-0 start-0" placeholder="Digite sua pesquisa..." style="z-index: 1;" onkeypress="submitKeyPress(event)">
-
-        <div class="bg-black p-3 w-100 h-100 position-fixed top-0 start-0 opacity-50" onclick="dNoneSearch()"></div>
-        
+        <form action="" id="searchForm">
+            <input type="text" name="" id="searchInput" class="w-100 p-3 position-fixed top-0 start-0" placeholder="Digite sua pesquisa..." style="z-index: 1;">
+        </form>
+        <div class="bg-black p-3 w-100 h-100 position-fixed top-0 start-0 opacity-50" id="searchOff"></div>
     </div>
 
 
@@ -27,11 +27,11 @@
 
         <asside>
 
-            <button class="btn btn-dark" onclick="dBlockSearch()">
+            <button class="btn btn-dark" id="searchBtn"">
                 <i class="bi bi-search fs-1"></i>
             </button>
 
-            <a href="login.html" class="btn btn-dark">
+            <a id="loginBtn" class="btn btn-dark">
                 <i class="bi bi-person fs-1"></i>
             </a>
 
