--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>MovieDB</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
-    <script src="scripts.js" defer></script>
+    <script src="scripts/home.js" defer type="module"></script>
+    <script src="scripts/search.js" defer type="module"></script>
     <style>
         ::-webkit-scrollbar {
             display: none;
@@ -22,8 +23,10 @@
 <body>
 
     <div id="searchPage" class="d-none">
-        <input type="text" name="" id="searchInput" class="w-100 p-3 position-fixed top-0 start-0" placeholder="Digite sua pesquisa..." style="z-index: 1;" onkeypress="submitKeyPress(event)">
-        <div class="bg-black p-3 w-100 h-100 position-fixed top-0 start-0 opacity-50" onclick="dNoneSearch()"></div>
+        <form id="searchForm">
+            <input type="text" name="" id="searchInput" class="w-100 p-3 position-fixed top-0 start-0" placeholder="Digite sua pesquisa..." style="z-index: 1;">
+        </form>
+        <div class="bg-black p-3 w-100 h-100 position-fixed top-0 start-0 opacity-50" id="searchOff"></div>
     </div>
 
 
@@ -35,11 +38,11 @@
 
         <asside>
 
-            <button class="btn btn-dark" onclick="dBlockSearch()">
+            <button class="btn btn-dark" id="searchBtn"">
                 <i class="bi bi-search fs-1"></i>
             </button>
 
-            <a href="login.html" class="btn btn-dark">
+            <a id="loginBtn" class="btn btn-dark">
                 <i class="bi bi-person fs-1"></i>
             </a>
 
@@ -49,22 +52,22 @@
 
     <main id="main">
 
-        <a href="detalhes.html" id="poster"></a>
+        <a id="poster"></a>
 
         <div class="container-fluid mt-3">
-            <a href="" class="text-dark text-underline-hover" onclick="indisponivel()"">
+            <a class="text-dark text-underline-hover">
                 <h2 class="display-5">Popular movies</h2>
             </a>
             <div id="filmesEmAlta" class="d-flex gap-3 overflow-scroll mt-3 mb-3">
-                <a href="" id="see_more" class="text-bg-dark d-flex align-items-center justify-content-center text-light p-3" onclick="indisponivel()" style="order: 1;">
+                <a id="see_more" class="text-bg-dark d-flex align-items-center justify-content-center text-light p-3" style="order: 1;">
                     <i class="bi bi-plus fs-1"></i>
                 </a>
             </div>
-            <a href="" class="text-dark text-underline-hover" onclick="indisponivel()"">
+            <a class="text-dark text-underline-hover"">
                 <h2 class="display-5">Popular series</h2>
             </a>
             <div id="seriesEmAlta" class="d-flex gap-3 overflow-scroll mt-3">
-                <a href="" id="see_more" class="text-bg-dark d-flex align-items-center justify-content-center text-light p-3" onclick="indisponivel()" style="order: 1;">
+                <a id="see_more" class="text-bg-dark d-flex align-items-center justify-content-center text-light p-3" style="order: 1;">
                     <i class="bi bi-plus fs-1"></i>
                 </a>
             </div>
