--- a/detalhes.html
+++ b/detalhes.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.5/font/bootstrap-icons.min.css">
     <script src="scripts/details.js" type="module" defer></script>
     <script src="scripts/search.js" type="module" defer></script>
+    <script src="scripts/utils.js" type="module" defer></script>
 </head>
 <body>
 
@@ -39,7 +40,13 @@
 
     </header>
 
-    <main id="detalhes"></main>
+    <main id="main" class="d-none"></main>
+
+    <div class="d-flex justify-content-center mt-3" id="loading">
+        <div class="spinner-border" role="status">
+            <span class="visually-hidden">Loading...</span>
+        </div>
+    </div>
 
 </body>
 </html>
