--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
     <script src="scripts/search.js" defer type="module"></script>
     <script src="scripts/utils.js" defer type="module"></script>
     <style>
-        ::-webkit-scrollbar {
-            display: none;
+        .popular {
+            display: flex;            
+            overflow-x: auto;        
+            -webkit-overflow-scrolling: touch; 
+            scrollbar-width: none;    
+            -ms-overflow-style: none; 
+        }
+
+        .popular::-webkit-scrollbar {
+            display: none;            
         }
     </style>
 </head>
@@ -45,14 +53,39 @@
 
     </header>
 
-    <main id="main" class="d-none">
+    <main id="main">
+        <a id="poster"></a>
+
+        <div class="container-fluid mt-3 mb-3">
+
+            <h2 class="display-5">Popular movies</h2>
+            <div id="filmesEmAlta" class="d-flex gap-3 overflow-scroll mt-3 mb-3 popular"></div>
+
+            <h2 class="display-5">Popular series</h2>
+            <div id="seriesEmAlta" class="d-flex gap-3 overflow-scroll mt-3 popular"></div>
+        </div>
     </main>
 
-    <div class="d-flex justify-content-center mt-3" id="loading">
-        <div class="spinner-border" role="status">
-            <span class="visually-hidden">Loading...</span>
+    <footer class="w-100 text-bg-dark mt-5 p-4">
+        <div class="container text-center">
+            <p class="text-light mb-2">Developed by <strong>Matheus Moraes</strong></p>
+            <div>
+                <a href="https://github.com/matheusgmo" target="_blank" class="text-light fs-4 mx-2">
+                    <i class="bi bi-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/matheusmoraesgb/" target="_blank" class="text-light fs-4 mx-2">
+                    <i class="bi bi-linkedin"></i>
+                </a>
+                <a href="https://www.instagram.com/matheus_gmo/" target="_blank" class="text-light fs-4 mx-2">
+                    <i class="bi bi-instagram"></i>
+                </a>
+                <a href="mailto:matheusmoraes.gb19@gmail.com" target="_blank" class="text-light fs-4 mx-2">
+                    <i class="bi bi-envelope"></i>
+                </a>
+            </div>
+            <p class="text-light mt-2">&copy; 2024 Matheus Moraes</p>
         </div>
-    </div>
+    </footer>
 
 </body>
 </html>
