--- a/detalhes.html
+++ b/detalhes.html
@@ -40,13 +40,28 @@
 
     </header>
 
-    <main id="main" class="d-none"></main>
+    <main id="main"></main>
 
-    <div class="d-flex justify-content-center mt-3" id="loading">
-        <div class="spinner-border" role="status">
-            <span class="visually-hidden">Loading...</span>
+    <footer class="w-100 text-bg-dark mt-5 p-4">
+        <div class="container text-center">
+            <p class="text-light mb-2">Developed by <strong>Matheus Moraes</strong></p>
+            <div>
+                <a href="https://github.com/matheusgmo" target="_blank" class="text-light fs-4 mx-2">
+                    <i class="bi bi-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/matheusmoraesgb/" target="_blank" class="text-light fs-4 mx-2">
+                    <i class="bi bi-linkedin"></i>
+                </a>
+                <a href="https://www.instagram.com/matheus_gmo/" target="_blank" class="text-light fs-4 mx-2">
+                    <i class="bi bi-instagram"></i>
+                </a>
+                <a href="mailto:matheusmoraes.gb19@gmail.com" target="_blank" class="text-light fs-4 mx-2">
+                    <i class="bi bi-envelope"></i>
+                </a>
+            </div>
+            <p class="text-light mt-2">&copy; 2024 Matheus Moraes</p>
         </div>
-    </div>
+    </footer>
 
 </body>
 </html>
