--- a/search.html
+++ b/search.html
@@ -40,7 +40,7 @@
 
     </header>
 
-    <main class="container-fluid mt-3 mb-3" id="main"></main>
+    <main class="container-fluid mt-3 mb-3" id="main" style="min-height: 60vh;"></main>
 
     <!-- <div class="d-flex justify-content-center p-3 gap-1">
         <button class="btn btn-primary">
